# test_task

./: .env-sample  Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py
