[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.1"
django = "^5.2.9"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
drf-yasg = "^1.21.11"
celery = "^5.6.0"
redis = "^7.1.0"
eventlet = "^0.40.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mypy = "^1.19.0"
isort = "^7.0.0"
black = "^25.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
